优化大部分bug, 只差文件夹下载和文件夹上传