@@ -77,24 +77,20 @@ public class ReturnFileByteServiceImpl implements ReturnFileByteService {
         }
 
         FileSystemResource resource = null;
-        String fileCover = fileInfo.getFileCover();
-        if (!Files.exists(Path.of(fileCover))) {
-            Path path = Paths.get(fileInfo.getFilePath());
-            if (!Files.exists(path)) {
-                return ResponseEntity.ok()
-                        .body(resource);
+
+        if (contentType.substring(0, contentType.lastIndexOf("/")).equals("image") && fileInfo.getFileCover() != null) {
+            String fileCover = fileInfo.getFileCover();
+            if (!Files.exists(Path.of(fileCover))) {
+                Path path = Paths.get(fileInfo.getFilePath());
+                if (!Files.exists(path)) {
+                    return ResponseEntity.ok()
+                            .body(resource);
+                }
+                resource = new FileSystemResource(path.toFile());
+            } else {
+                Path path = Paths.get(fileCover);
+                resource = new FileSystemResource(path.toFile());
             }
-
-            resource = new FileSystemResource(path.toFile());
-            return ResponseEntity.ok()
-                    .headers(headers)
-                    .contentType(MediaType.parseMediaType(contentType))
-                    .body(resource);
-        }
-
-        if (contentType.substring(0, contentType.lastIndexOf("/")).equals("image") && fileCover != null) {
-            Path coverPath = Paths.get(fileCover);
-            resource = new FileSystemResource(coverPath.toFile());
         } else {
             resource = new FileSystemResource(filePath.toFile());
         }
